# raylib-2d-platformer-test

./: CMakeLists.txt  main.cpp
src/: Coin.cpp  Coin.h  Collectable.h  CommandQueue.cpp  CommandQueue.h  Player.cpp  Player.h  Renderable.h  ScoreManager.cpp  ScoreManager.h  World.cpp  World.h
